--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -134,7 +134,7 @@ body {
   transform: translate(-50%, -50%);
   width: 80%;
   height: 80%;
-  border: 10px solid red;
+  border: 20px solid #f87171;
   border-radius: 50%;
   background: radial-gradient(
     circle,
@@ -143,7 +143,7 @@ body {
     transparent 100%
   );
   z-index: 1;
-  filter: blur(2px);
+  box-shadow: 10px 15px 200px rgba(255, 100, 50, 0.3);
 }
 
 .bracket-left::before {
