--- a/To Practice/style.css
+++ b/To Practice/style.css
@@ -1,26 +1,52 @@
 
-* {
-  background-color: rgb(27, 27, 30);
-  font-family: Helvetica, sans-serif;
-  color: lightblue;
+body {
+  font-family: Arial, sans-serif;
+  background-color: rgb(210, 216, 221);
 }
 
-.title {
+h1 {
+  color: rgb(62, 62, 190);
+}
+
+form {
+  background-color: rgb(255, 255, 255);
   text-align: center;
-  font-size: 10em;
+  max-width: 350px;
+  margin: auto;
+  padding: 25px;
+  border-radius: 10px;
+  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.401);
 }
 
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 15px;
+#textBox {
+  width: 50%;
+  text-align: center;
+  font-size: 2em;
+  border: 2px solid rgba(0, 0, 0, 0.83);
+  border-radius: 4px;
+  margin-bottom: 15px;
 }
 
-.Btn {
-  padding: 20px;
-  font-size: 5em;
-  border-radius: 15px;
+label {
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
+button {
+  margin-top: 15px;
+  background-color: rgb(3, 159, 243);
+  font-size: 1.5em;
+  border: none;
+  padding: 10px 15px;
+  border-radius: 5px;
+  cursor: pointer;
+}
 
+button:hover {
+  background-color: rgb(3, 159, 80%);
+}
+
+#result {
+  font-size: 1.75em;
+  font-weight: bold;
+}
